<resources>
    <string name="app_name">utilidades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="frist_label">Frist</string>
    <string name="second_label">Second</string>
    <string name="third_label">Third</string>
    <string name="four_label">Four</string>


    <string name="to_frist_button">To Frist</string>
    <string name="to_second_button">To Second</string>
    <string name="to_third_button">To Third</string>


    <string name="error_label">ERROR</string>
    <string name="dialog">Please type your name</string>

    <!--fragmento cuatro-->
    <string name="to_four_button">To Four</string>


    <string name="txtname">Name</string>
    <string name="txtpassword">Password</string>


    <string name="btnLogin">Login</string>

    <string name="hideUserName">Enter Username</string>
    <string name="hideUserPassword">Enter Password</string>



</resources>